Fix settings padding on Firefox

--- a/Pages/Settings.razor.css
+++ b/Pages/Settings.razor.css
@@ -1,3 +1,7 @@
+.container {
+    padding: 16px;
+}
+
 .image {
     box-sizing: border-box;
     width: 120px;
@@ -30,6 +34,10 @@
 }
 
 @media (min-width: 600px) {
+    .container {
+        padding: 24px;
+    }
+
     .image {
         width: 160px;
         height: 160px;
